tests/snapshots/errors/print_array_no_tostring.mc
// Error: array does not implement ToString
let arr = [1, 2, 3];
print(arr);
